# react-oauth2-pkce

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc.js  LICENSE  README.md  SECURITY.md  biome.json  index.html  jest.config.js  package.json  pnpm-lock.yaml  publish.md  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: codeql-analysis.yml  conventional-commits-check.yaml  publish.yaml  stale.yml  tests.yaml
examples/github-auth-provider/: docker-compose.yaml
examples/github-auth-provider/github-auth-proxy/: Dockerfile  (+1 more)
examples/keycloak-auth-provider/: docker-compose.yaml
examples/microsoft-auth-provider/: docker-compose.yaml
examples/react-app/: Dockerfile  package.json
examples/react-app/github-auth-proxy/: pyproject.toml
public/: index.html
src/: AuthContext.jsx  AuthContext.tsx  Hooks.ts  Hooks.tsx  README.md  Types.ts  authConfig.ts  authentication.ts  authentication.tsx  decodeJWT.ts  errors.ts  httpUtils.ts  index.js  index.jsx  index.ts  package.json  pkceUtils.ts  popupUtils.ts  timeUtils.ts  tsconfig.json  types.ts  useAuthContext.tsx  useBrowserStorage.ts  useInterval.ts  useStorage.tsx  validateAuthConfig.ts
tests/: AuthContext.test.tsx  auth-request.test.tsx  auth-util.test.ts  auth_request.test.tsx  authentication.test.ts  get_token.test.tsx  insecure-environment.test.tsx  jestSetup.js  login.test.tsx  logout.test.tsx  setup-file.js  setup-file.ts  test-utils.tsx  token-request.test.tsx  token_request.test.tsx
(+23 files in other folders)
